Modified:Alignment Fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
  body{
 
-    background-image:url(./background.jpg);
+    /* background-image:url(./background.jpg); */
+    background-color: cadetblue;
 
  }
  #mb{
@@ -91,6 +92,7 @@
             #trans{
                 height:60px;
                 width:30%;
+                margin-top:40%;
                 margin-left:36%;
                 margin-right:40%;
                 position: relative;
